config changes: prefer https for dcache, use www_cp.sh again so we can use ucondb again

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -253,12 +253,13 @@ default_doors= fcdfdcache21.fnal.gov fcdfdcache22.fnal.gov fcdfdcache23.fnal.gov
 
 [location dcache_cdfen]
 need_cpn_lock=0
-protocols=gsiftp: srm: root:
+protocols=https: gsiftp: srm: root:
 prefix_file=/pnfs/cdfen/
 prefix_gsiftp=gsiftp://cdfdca1.fnal.gov/pnfs/fnal.gov/usr/cdfen/
 prefix_srm=srm://cdfdca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/
 prefix_root=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
 prefix_xroot=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
+prefix_https=https://cdfdca1.fnal.gov:2880/pnfs/fnal.gov/usr/
 
 # ----------------------
 # section to make /scratch/users/ go through gridftp door at smu
@@ -286,12 +287,13 @@ prefix_file=
 
 [location dcache_dzero]
 need_cpn_lock=0
-protocols=gsiftp: srm: root:
+protocols=https: gsiftp: srm: root:
 prefix_file=/pnfs/dzero/
 prefix_gsiftp=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
 prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
 prefix_root=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
 prefix_xroot=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
+prefix_https=https://d0dca1.fnal.gov:2880/pnfs/fnal.gov/usr/
 
 [rotation stken_gsiftp]
 door_proto=gsiftp
@@ -325,7 +327,7 @@ prefix_root=root://castorpublic.cern.ch//
 
 [location dcache_jinr_ru]
 need_cpn_lock=0
-protocols=gsiftp: srm: root: https: 
+protocols=https: gsiftp: srm: root: 
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://lxse-dr01.jinr.ru:2811/
 prefix_srm=srm://lxse-dc01.jinr.ru:8443/srm/managerv2?SFN=/
@@ -335,7 +337,7 @@ prefix_https=https://lcgsedr07.jinr.ru:2880/
 
 [location dcache_stken]
 need_cpn_lock=0
-protocols=gsiftp: srm: root: https: 
+protocols=https: gsiftp: srm: root: 
 door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
@@ -590,7 +592,7 @@ strip_file_prefix=1
 need_proxy=1
 extra_env=IFDH_HTTPS_EXTRA
 extra_env2=IFDH_CURL_EXTRA
-cp_cmd=(unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
+cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
 #lss_cmd_lists_dir=0
 lss_cmd_lists_dir=0
 lss_skip=0
