for issue#26509 make all samweb calls https

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -9,7 +9,7 @@ protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: g
 prefixes= D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsiftp://lxse-dr01.jinr.ru/pnfs/jinr.ru/ /pnfs/jinr.ru/ /pnfs/ /eos/ /castor/ /scratch/users/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ gsiftp://fg-bestman1.fnal.gov:2811/ gsiftp://fg-bestman1.fnal.gov/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca1.fnal.gov:2880/pnfs/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
 
 [tokens]
-enabled=1
+enabled=0
 vault_server=fermicloud543.fnal.gov
 # experiment to -i issuer mapping
 numrules=0
@@ -253,7 +253,7 @@ default_doors= fcdfdcache21.fnal.gov fcdfdcache22.fnal.gov fcdfdcache23.fnal.gov
 
 [location dcache_cdfen]
 need_cpn_lock=0
-protocols=https: gsiftp: srm: root:
+protocols=https: root: gsiftp: srm: 
 prefix_file=/pnfs/cdfen/
 prefix_gsiftp=gsiftp://cdfdca1.fnal.gov/pnfs/fnal.gov/usr/cdfen/
 prefix_srm=srm://cdfdca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/
@@ -287,7 +287,7 @@ prefix_file=
 
 [location dcache_dzero]
 need_cpn_lock=0
-protocols=https: gsiftp: srm: root:
+protocols=https: root: gsiftp: srm: 
 prefix_file=/pnfs/dzero/
 prefix_gsiftp=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
 prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
@@ -313,7 +313,7 @@ default_doors=fndca1.fnal.gov
 
 [location cern_eos]
 need_cpn_lock=0
-protocols=gsiftp: root:
+protocols=root: gsiftp:
 prefix_gsiftp=gsiftp://eospublicftp.cern.ch//
 prefix_root=root://eospublic.cern.ch//
 
@@ -327,7 +327,7 @@ prefix_root=root://castorpublic.cern.ch//
 
 [location dcache_jinr_ru]
 need_cpn_lock=0
-protocols=https: gsiftp: srm: root: 
+protocols=https: root: gsiftp: srm: 
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://lxse-dr01.jinr.ru:2811/
 prefix_srm=srm://lxse-dc01.jinr.ru:8443/srm/managerv2?SFN=/
@@ -337,7 +337,7 @@ prefix_https=https://lcgsedr07.jinr.ru:2880/
 
 [location dcache_stken]
 need_cpn_lock=0
-protocols=https: gsiftp: srm: root: 
+protocols=https: root: gsiftp: srm: 
 door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
@@ -530,7 +530,7 @@ lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*(
 lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
 ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
 mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
-chmod_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-chmod %(mode)s %(src)s
+chmod_cmd=/bin/true %(src)s
 mkdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-mkdir %(src)s
 rm_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm %(src)s
 rmdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm -r %(src)s
@@ -603,7 +603,7 @@ lss_re1 = (/.*/)([^/]*)/\s([0-9]+)\s*$
 lss_re2 = (/.*/)([^/]*)\s([0-9]+)\s*$
 lss_cmd=www_cp.sh --ls %(src)s
 mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
-chmod_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-chmod %(mode)s %(src)s
+chmod_cmd=/bin/true %(src)s
 mkdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-mkdir %(src)s
 rm_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm %(src)s
 rmdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm -r %(src)s
