finding gfal-ls output woes with latest

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -257,9 +257,9 @@ protocols=https: root: gsiftp: srm:
 prefix_file=/pnfs/cdfen/
 prefix_gsiftp=gsiftp://cdfdca1.fnal.gov/pnfs/fnal.gov/usr/cdfen/
 prefix_srm=srm://cdfdca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/
-prefix_root=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
-prefix_xroot=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
-prefix_https=https://cdfdca1.fnal.gov:2880/pnfs/fnal.gov/usr/
+prefix_root=root://cdfdca1.fnal.gov:1094/cdfen
+prefix_xroot=root://cdfdca1.fnal.gov:1094/cdfen
+prefix_https=https://cdfdca1.fnal.gov:2880/cdfen
 
 # ----------------------
 # section to make /scratch/users/ go through gridftp door at smu
@@ -291,9 +291,9 @@ protocols=https: root: gsiftp: srm:
 prefix_file=/pnfs/dzero/
 prefix_gsiftp=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
 prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
-prefix_root=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
-prefix_xroot=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
-prefix_https=https://d0dca1.fnal.gov:2880/pnfs/fnal.gov/usr/
+prefix_root=root://d0dca1.fnal.gov:1094/dzero
+prefix_xroot=root://d0dca1.fnal.gov:1094/dzero
+prefix_https=https://d0dca1.fnal.gov:2880/dzero
 
 [rotation stken_gsiftp]
 door_proto=gsiftp
@@ -342,9 +342,9 @@ door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
 prefix_srm=srm://fndca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/
-prefix_root=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
-prefix_xroot=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
-prefix_https=https://fndca1.fnal.gov:2880/pnfs/fnal.gov/usr/
+prefix_root=root://fndca1.fnal.gov:1094/
+prefix_xroot=root://fndca1.fnal.gov:1094/
+prefix_https=https://fndca1.fnal.gov:2880/
 
 [location amazon_s3]
 need_cpn_lock=0
@@ -505,7 +505,7 @@ cp_cmd=(unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-cop
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/ 	]*)[ 	]*$
+lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
 lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
 ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
 mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
@@ -526,7 +526,7 @@ cp_cmd=(unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-cop
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/ 	]*)[ 	]*$
+lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
 lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
 ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
 mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
@@ -596,11 +596,15 @@ cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
 #lss_cmd_lists_dir=0
 lss_cmd_lists_dir=0
 lss_skip=0
-lss_size_last=1
-lss_dir_last=1
-ll_cmd=www_cp.sh --ll %(src)s
-lss_re1 = (/.*/)([^/]*)/\s([0-9]+)\s*$
-lss_re2 = (/.*/)([^/]*)\s([0-9]+)\s*$
+lss_size_last=0
+lss_dir_last=0
+#ll_cmd=www_cp.sh --ll %(src)s
+#lss_re1 = (/.*/)([^/]*)/\s([0-9]+)\s*$
+#lss_re2 = (/.*/)([^/]*)\s([0-9]+)\s*$
+lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
+lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+ll_cmd=
 lss_cmd=www_cp.sh --ls %(src)s
 mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
 chmod_cmd=/bin/true %(src)s
