--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -342,8 +342,8 @@ door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
 prefix_srm=srm://fndca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/
-prefix_root=root://fndca1.fnal.gov:1094/
-prefix_xroot=root://fndca1.fnal.gov:1094/
+prefix_root=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
+prefix_xroot=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
 prefix_https=https://fndca1.fnal.gov:2880/
 
 [location amazon_s3]
@@ -505,7 +505,8 @@ cp_cmd=(unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-cop
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
+lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}(.*/)([^ 	]*)\s*
+lss_re2 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
 lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
 ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
 mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
@@ -521,21 +522,23 @@ need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_ROOT_EXTRA
 extra_env2=IFDH_XROOT_EXTRA
-cp_cmd=(unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
-#lss_cmd_lists_dir=0
+#cp_cmd=xrdcp –DIRedirectLimit 255 -DIRequestTimeout 14400 --tpc first --force %(extra)s %(src)s %(dst)s
+cp_cmd=xrdcp -DIRequestTimeout 14400 --tpc first --force  %(extra)s %(src)s %(dst)s
+lss_cmd=xrdwrap.sh ls -l %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
-lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
-ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
-mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
-chmod_cmd=/bin/true %(src)s
-mkdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-mkdir %(src)s
-rm_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm %(src)s
-rmdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm -r %(src)s
-pin_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; srm-bring-online --lifetime=%(secs)s %(src)s
+# drwx 2016-03-30 17:17:30         512 /pnfs/fnal.gov/usr/nova/scratch/users/mengel/tdest4
+lss_re1 = ([-dl])[-rwxst]{3}\s*[0-9].{18}\s*([0-9]*)\s*(.*/)([^/]*)$
+ll_cmd=xrdwrap.sh ls -l %(r)s %(src)s
+mv_cmd=xrdwrap.sh mv %(src)s %(dst)s
+chmod_cmd=xrdwrap.sh chmod %(mode)s %(src)s
+mkdir_cmd=xrdwrap.sh mkdir %(src)s
+rm_cmd=xrdwrap.sh rm %(src)s
+rmdir_cmd=xrdwrap.sh rmdir %(src)s
 cp_r_cmd=
+pin_cmd=
+
 
 [protocol xroot:]
 alias=root:
@@ -596,14 +599,15 @@ cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
 #lss_cmd_lists_dir=0
 lss_cmd_lists_dir=0
 lss_skip=0
-lss_size_last=0
-lss_dir_last=0
-#ll_cmd=www_cp.sh --ll %(src)s
-#lss_re1 = (/.*/)([^/]*)/\s([0-9]+)\s*$
-#lss_re2 = (/.*/)([^/]*)\s([0-9]+)\s*$
-lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
-lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
-ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+lss_size_last=1
+lss_dir_last=1
+ll_cmd=www_cp.sh --ll %(src)s
+lss_re1 = (/.*/)([^/]*/)\s([0-9]+)\s*$
+lss_re2 = (/.*/)([^/]*)\s([0-9]+)\s*$
+#lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}(.*/)([^ 	]*)\s*
+#lss_re2 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
+#lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+#ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
 ll_cmd=
 lss_cmd=www_cp.sh --ls %(src)s
 mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
