--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -3,7 +3,7 @@ EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|dar
 
 [general]
 conditionals=macos smu_onsite 
-rotations=stken_gsiftp cdfen_gsiftp
+rotations=
 
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple:
 prefixes= D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsiftp://lxse-dr01.jinr.ru/pnfs/jinr.ru/ /pnfs/jinr.ru/ /pnfs/ /eos/ /castor/ /scratch/users/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ gsiftp://fg-bestman1.fnal.gov:2811/ gsiftp://fg-bestman1.fnal.gov/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca1.fnal.gov:2880/pnfs/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
@@ -235,12 +235,6 @@ need_cpn_lock=0
 protocols=i:
 prefix_i=
 
-[rotation cdfen_gsiftp]
-door_proto=gsiftp
-door_repl_re=gsiftp://(cdfdca1|fcdfdcache)[^/]*.fnal.gov
-lookup_door_uri=-
-default_doors= fcdfdcache21.fnal.gov fcdfdcache22.fnal.gov fcdfdcache23.fnal.gov
-
 [location dcache_cdfen]
 need_cpn_lock=0
 protocols=gsiftp: srm: root:
@@ -282,22 +276,6 @@ prefix_gsiftp=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
 prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
 prefix_root=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
 prefix_xroot=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
-
-[rotation stken_gsiftp]
-door_proto=gsiftp
-door_repl_re=gsiftp://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
-lookup_door_uri=https://fndca.fnal.gov/info/doors
-# to test timeout code use:
-#lookup_door_uri=http://www.deelay.me/10000/http://fndca.fnal.gov:2288/info/doors
-default_doors=fndca1.fnal.gov:2811 fndca1.fnal.gov:2812
-
-[rotation stken_rootd]
-door_proto=rootd
-door_repl_re=rootd://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
-lookup_door_uri=https://fndca.fnal.gov/info/doors
-# to test timeout code use:
-#lookup_door_uri=http://www.deelay.me/10000/http://fndca.fnal.gov:2288/info/doors
-default_doors=fndca1.fnal.gov
 
 [location cern_eos]
 need_cpn_lock=0
