fix extra_env2 settings (#26634)

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -412,7 +412,7 @@ cp_r_cmd=
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_GRIDFTP_EXTRA
-extra_env2=IFDH_GSIFTP_EXTRA
+extra_env_2=IFDH_GSIFTP_EXTRA
 cp_cmd=globus-url-copy -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 %(extra)s %(src)s %(dst)s
 cp_r_cmd=globus-url-copy -cd -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 -r %(extra)s %(src)s/ %(dst)s/
 lss_cmd=globus-url-copy -list %(src)s
@@ -434,7 +434,7 @@ pin_cmd=false
 [protocol gsiftp:]
 need_proxy=1
 extra_env=IFDH_GRIDFTP_EXTRA
-extra_env2=IFDH_GSIFTP_EXTRA
+extra_env_2=IFDH_GSIFTP_EXTRA
 strip_file_prefix=0
 cp_cmd=globus-url-copy -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 %(extra)s %(src)s %(dst)s
 cp_r_cmd=globus-url-copy -cd -rst-retries 1 -gridftp2 -nodcau -restart -stall-timeout 14400 -r %(extra)s %(src)s/ %(dst)s/
@@ -500,7 +500,7 @@ cp_r_cmd=
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_ROOT_EXTRA
-extra_env2=IFDH_XROOT_EXTRA
+extra_env_2=IFDH_XROOT_EXTRA
 #cp_cmd=xrdcp –DIRedirectLimit 255 -DIRequestTimeout 14400 --tpc first --force %(extra)s %(src)s %(dst)s
 cp_cmd=xrdcp -DIRequestTimeout 14400 --tpc first --force  %(extra)s %(src)s %(dst)s
 lss_cmd=xrdwrap.sh ls -l %(src)s
@@ -573,7 +573,7 @@ pin_cmd=false
 strip_file_prefix=1
 need_proxy=1
 extra_env=IFDH_HTTPS_EXTRA
-extra_env2=IFDH_CURL_EXTRA
+extra_env_2=IFDH_CURL_EXTRA
 cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
 #lss_cmd_lists_dir=0
 lss_cmd_lists_dir=0
@@ -626,7 +626,7 @@ pin_cmd=
 strip_file_prefix=0
 need_proxy=
 extra_env=
-extra_env2=
+extra_env_2=
 cp_cmd=
 lss_cmd=
 lss_skip=
