--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -2,8 +2,8 @@
 EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|darkside|des|ds50|e990|dune|geant4|gm2|GM2|genie|icarus|lar1nd|lariat|lartpc|lbne|lbnewc|minerva|miniboone|mu2e|noble|nova|numix|nusoft|patriot|sbnd|sciboone|seaquest|Simons|uboone)
 
 [general]
-conditionals=macos smu_onsite 
-rotations=
+conditionals=macos smu_onsite
+rotations=stken_gsiftp
 
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple:
 prefixes= D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsiftp://lxse-dr01.jinr.ru/pnfs/jinr.ru/ /pnfs/jinr.ru/ /pnfs/ /eos/ /castor/ /scratch/users/ root://eospublic.cern.ch//eos/ gsiftp://eospublicftp.cern.ch//eos/ root://castorpublic.cern.ch//castor/ gsiftp://castorpublic.cern.ch//castor/ gsiftp://fg-bestman1.fnal.gov:2811/ gsiftp://fg-bestman1.fnal.gov/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca1.fnal.gov:2880/pnfs/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
@@ -289,6 +289,13 @@ prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzer
 prefix_root=root://d0dca1.fnal.gov:1094/dzero
 prefix_xroot=root://d0dca1.fnal.gov:1094/dzero
 prefix_https=https://d0dca1.fnal.gov:2880/dzero
+
+[rotation stken_gsiftp]
+door_proto=gsiftp
+door_repl_re=gsiftp://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
+#lookup_door_uri=https://fndca.fnal.gov/info/doors
+lookup_door_uri=-
+default_doors=fndca1.fnal.gov:2811 fndca1.fnal.gov:2812 fndca1.fnal.gov:2813 fndca1.fnal.gov:2814 fndca1.fnal.gov:2815 fndca1.fnal.gov:2816 fndca1.fnal.gov:2817 fndca1.fnal.gov:2818 fndca1.fnal.gov:2819 fndca1.fnal.gov:2820
 
 [location cern_eos]
 need_cpn_lock=0
