add fndca1.fnal.gov:2821 to rotation

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -295,7 +295,7 @@ door_proto=gsiftp
 door_repl_re=gsiftp://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
 #lookup_door_uri=https://fndca.fnal.gov/info/doors
 lookup_door_uri=-
-default_doors=fndca1.fnal.gov:2811 fndca1.fnal.gov:2812 fndca1.fnal.gov:2813 fndca1.fnal.gov:2814 fndca1.fnal.gov:2815 fndca1.fnal.gov:2816 fndca1.fnal.gov:2817 fndca1.fnal.gov:2818 fndca1.fnal.gov:2819 fndca1.fnal.gov:2820
+default_doors=fndca1.fnal.gov:2811 fndca1.fnal.gov:2812 fndca1.fnal.gov:2813 fndca1.fnal.gov:2814 fndca1.fnal.gov:2815 fndca1.fnal.gov:2816 fndca1.fnal.gov:2817 fndca1.fnal.gov:2818 fndca1.fnal.gov:2819 fndca1.fnal.gov:2820 fndca1.fnal.gov:2821
 
 [location cern_eos]
 need_cpn_lock=0
