--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -2,6 +2,7 @@
 EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|darkside|des|ds50|e990|dune|geant4|gm2|GM2|genie|icarus|lar1nd|lariat|lartpc|lbne|lbnewc|minerva|miniboone|mu2e|noble|nova|numix|nusoft|patriot|sbnd|sciboone|seaquest|Simons|uboone)
 
 [general]
+version=v2_6_1c
 conditionals=macos smu_onsite
 rotations=stken_gsiftp
 
