--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -487,21 +487,21 @@ pin_cmd=
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
-cp_cmd=(unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2) 
+cp_cmd=(unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; exec gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s >&2)
 #lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
 lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}(.*/)([^ 	]*)\s*
 lss_re2 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
-lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
-ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
-mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
-chmod_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-chmod %(mode)s %(src)s
-mkdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-mkdir %(src)s
-rm_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm %(src)s
-rmdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm -r %(src)s
-pin_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; srm-bring-online --lifetime=%(secs)s %(src)s
+lss_cmd=  unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-ls -l %(src)s
+ll_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-ls -l %(src)s
+mv_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-rename %(src)s %(dst)s
+chmod_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-chmod %(mode)s %(src)s
+mkdir_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-mkdir %(src)s
+rm_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-rm %(src)s
+rmdir_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-rm -r %(src)s
+pin_cmd=  unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH; srm-bring-online --lifetime=%(secs)s %(src)s
 cp_r_cmd=
 
 [protocol root:]
@@ -593,16 +593,16 @@ lss_re1 = (/.*/)([^/]*/)\s([0-9]+)\s*$
 lss_re2 = (/.*/)([^/]*)\s([0-9]+)\s*$
 #lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}(.*/)([^ 	]*)\s*
 #lss_re2 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
-#lss_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
-#ll_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-ls -l %(src)s
+#lss_cmd=  unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-ls -l %(src)s
+#ll_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-ls -l %(src)s
 ll_cmd=
 lss_cmd=www_cp.sh --ls %(src)s
-mv_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rename %(src)s %(dst)s
+mv_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-rename %(src)s %(dst)s
 chmod_cmd=/bin/true %(src)s
-mkdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-mkdir %(src)s
-rm_cmd=   unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm %(src)s
-rmdir_cmd=unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; gfal-rm -r %(src)s
-pin_cmd=  unset PYTHONHOME; unset PYTHONPATH; unset LD_LIBRARY_PATH; srm-bring-online --lifetime=%(secs)s %(src)s
+mkdir_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-mkdir %(src)s
+rm_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-rm %(src)s
+rmdir_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-rm -r %(src)s
+pin_cmd=  unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH; srm-bring-online --lifetime=%(secs)s %(src)s
 
 [protocol http:]
 alias=https:
