--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -249,7 +249,7 @@ prefix_i=
 
 [location dcache_cdfen]
 need_cpn_lock=0
-protocols=https: root: gsiftp: srm: 
+protocols=gsiftp: srm: root: https:
 prefix_file=/pnfs/cdfen/
 prefix_gsiftp=gsiftp://cdfdca1.fnal.gov/pnfs/fnal.gov/usr/cdfen/
 prefix_srm=srm://cdfdca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/
@@ -283,7 +283,7 @@ prefix_file=
 
 [location dcache_dzero]
 need_cpn_lock=0
-protocols=https: root: gsiftp: srm: 
+protocols=gsiftp: srm: root: https:
 prefix_file=/pnfs/dzero/
 prefix_gsiftp=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
 prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
@@ -314,7 +314,7 @@ prefix_root=root://castorpublic.cern.ch//
 
 [location dcache_jinr_ru]
 need_cpn_lock=0
-protocols=https: root: gsiftp: srm: 
+protocols=gsiftp: srm: root: https:
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://lxse-dr01.jinr.ru:2811/
 prefix_srm=srm://lxse-dc01.jinr.ru:8443/srm/managerv2?SFN=/
@@ -324,7 +324,7 @@ prefix_https=https://lcgsedr07.jinr.ru:2880/
 
 [location dcache_stken]
 need_cpn_lock=0
-protocols=https: root: gsiftp: srm: 
+protocols=gsiftp: srm: root: https:
 door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
