--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -583,20 +583,14 @@ need_proxy=1
 extra_env=IFDH_HTTPS_EXTRA
 extra_env_2=IFDH_CURL_EXTRA
 cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
-#lss_cmd_lists_dir=0
 lss_cmd_lists_dir=0
 lss_skip=0
-lss_size_last=1
-lss_dir_last=1
+lss_size_last=0
+lss_dir_last=0
+lss_cmd=www_cp.sh --ll %(src)s
+lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}(.*/)([^ 	]*)\s*
+lss_re2 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
 ll_cmd=www_cp.sh --ll %(src)s
-lss_re1 = (/.*/)([^/]*/)\s([0-9]+)\s*$
-lss_re2 = (/.*/)([^/]*)\s([0-9]+)\s*$
-#lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}(.*/)([^ 	]*)\s*
-#lss_re2 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
-#lss_cmd=  unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-ls -l %(src)s
-#ll_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-ls -l %(src)s
-ll_cmd=
-lss_cmd=www_cp.sh --ls %(src)s
 mv_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-rename %(src)s %(dst)s
 chmod_cmd=/bin/true %(src)s
 mkdir_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; gfal-mkdir %(src)s
