fix Authorization: Bearer header by trimming extra newline read from token file.

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -13,7 +13,9 @@ prefixes= D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ gsift
 enabled=0
 vault_server=fermicloud543.fnal.gov
 # experiment to -i issuer mapping
-numrules=0
+numrules=1
+match1=samdev
+repl1=fermilab
 #match1=(.*)
 #repl1=cilogon
 
