--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -585,6 +585,7 @@ need_proxy=1
 extra_env=IFDH_HTTPS_EXTRA
 extra_env_2=IFDH_CURL_EXTRA
 cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
+cp_r_cmd=gfal-copy -r %(extra)s %(src)s %(dst)s
 lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
