fall back to mostly working JSON code

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -585,7 +585,7 @@ need_proxy=1
 extra_env=IFDH_HTTPS_EXTRA
 extra_env_2=IFDH_CURL_EXTRA
 cp_cmd=www_cp.sh %(extra)s %(src)s %(dst)s
-cp_r_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; BEARER_TOKEN=`cat $BEARER_TOKEN_FILE` gfal-copy -t 14400 -r %(extra)s %(src)s %(dst)s
+cp_r_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; BEARER_TOKEN=`cat ${BEARER_TOKEN_FILE:-/dev/null}` gfal-copy -t 14400 -r %(extra)s %(src)s %(dst)s
 lss_cmd_lists_dir=0
 lss_skip=0
 lss_size_last=0
@@ -594,11 +594,11 @@ lss_cmd=www_cp.sh --ll %(src)s
 lss_re1 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}(.*/)([^ 	]*)\s*
 lss_re2 = \s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[0-9]*\s*[0-9]*\s*([0-9]*)\s.{13}()([^ 	]*)\s*
 ll_cmd=www_cp.sh --ll %(src)s
-mv_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; BEARER_TOKEN=`cat $BEARER_TOKEN_FILE` gfal-rename %(src)s %(dst)s
+mv_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; BEARER_TOKEN=`cat $BEARER_TOKEN_FILE:-/dev/null}` gfal-rename %(src)s %(dst)s
 chmod_cmd=/bin/true %(src)s
-mkdir_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; BEARER_TOKEN=`cat $BEARER_TOKEN_FILE` gfal-mkdir %(src)s
-rm_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; BEARER_TOKEN=`cat $BEARER_TOKEN_FILE` gfal-rm %(src)s
-rmdir_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; BEARER_TOKEN=`cat $BEARER_TOKEN_FILE` gfal-rm -r %(src)s
+mkdir_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; BEARER_TOKEN=`cat ${BEARER_TOKEN_FILE:-/dev/null}` gfal-mkdir %(src)s
+rm_cmd=   unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; BEARER_TOKEN=`cat ${BEARER_TOKEN_FILE:-/dev/null}` gfal-rm %(src)s
+rmdir_cmd=unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH GFAL_PLUGIN_DIR; BEARER_TOKEN=`cat ${BEARER_TOKEN_FILE:-/dev/null}` gfal-rm -r %(src)s
 pin_cmd=  unset PYTHONHOME PYTHONPATH LD_LIBRARY_PATH; srm-bring-online --lifetime=%(secs)s %(src)s
 
 [protocol http:]
