--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -331,9 +331,9 @@ door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
 prefix_srm=srm://fndca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/
-prefix_root=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
-prefix_xroot=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
-prefix_https=https://fndca1.fnal.gov:2880/
+prefix_root=root://fndcadoor.fnal.gov:1094/pnfs/fnal.gov/usr/
+prefix_xroot=root://fndcadoor.fnal.gov:1094/pnfs/fnal.gov/usr/
+prefix_https=https://fndcadoor.fnal.gov:2880/
 
 [location amazon_s3]
 need_cpn_lock=0
