--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -23,15 +23,17 @@ repl1=fermilab
 enabled=1
 
 [experiment_vo] 
-numrules=4
+numrules=5
 match1=(lsst|fermilab|dune|des)
 repl1=$1:/$1
 match2=mars(.*)
 repl2=fermilab:/fermilab/mars/$1
 match3=samdev
 repl3=fermilab:/fermilab
-match4=(.*)
-repl4=fermilab:/fermilab/$1
+match4=hypot
+repl4=fermilab:/fermilab
+match5=(.*)
+repl5=fermilab:/fermilab/$1
 
 [gid_exp]
 gidexplist=annie auger darkside des dune gm2 larp lsst minerva minos minosplus mu2e next nova seaquest uboone
