--- a/ifdh/Makefile
+++ b/ifdh/Makefile
@@ -25,6 +25,7 @@ LIB=libifdh.$(SHLIB)
 HDR=ifdh.h
 SWIGCXXFLAGS=-fPIC -I../util -I../numsg -I../../util -I../../numsg -I../../ifdh -g -Dregister= -I$${PYTHON_INCLUDE:-`echo $${VIRTUAL_ENV:-/usr}/include/python$${PYMAJOR:-}*`} $(ARCH)
 CXXFLAGS=-pedantic-errors -Wall -Wextra -Werror -fPIC -I../../util -I../util -I ../../numsg -I../numsg -g  -std=c++11  $(ARCH) -I$(SRCDIR) 
+PYBIND_CXXFLAGS=-Wall -Wextra -fPIC -I../../util -I../util -I ../../numsg -I../numsg -g  -std=c++11  $(ARCH) -I$(SRCDIR) 
 CFLAGS=-pedantic-errors -Wall -Wextra -Werror -fPIC -I../../util -I../util -I ../../numsg -I../numsg -g  $(ARCH) -I$(SRCDIR) -std=c99
 OBJ=ifdh.o ifdh_cp.o ifdh_sam.o ifdh_dd.o
 ALL_OBJS=$(OBJ) ../util/WebAPI.o ../numsg/numsg.o ../util/SyslogAPI.o ../util/utils.o ../util/regwrap.o ../util/Checksum.o ../util/md5.o ../util/WimpyConfigParser.o ../util/sha256.o ../util/JSON.o 
@@ -73,7 +74,7 @@ ifdh: libifdh.$(SHLIB) ifdh_main.o
 #	patch < ifdh_pybindgen.patch
 
 ifdh_pybindgen.o: ifdh_pybindgen.cc
-	${CXX} $(CXXFLAGS) $(ARCH) -Wno-missing-field-initializers -c -o $@  $(SWIGCXXFLAGS) $< 
+	${CXX} $(PYBINDGEN_CXXFLAGS) $(ARCH) -Wno-missing-field-initializers -c -o $@  $(SWIGCXXFLAGS) $< 
 
 python/ifdh.$(SHLIB): $(PYMOD_OBJS)
 	${CXX} --shared $(ARCH) -o  $@ $(PYMOD_OBJS) `ls $${PYTHON_LIB:-/usr/lib64}/libpython$${PYMAJOR:-}*[asd]* | head -1` $(LDLIBS) || ${CXX} --shared $(ARCH) -o  $@ $(PYMOD_OBJS)  `ls $${PYTHON_LIB:-/usr/lib}/libpython$${PYMAJOR:-}*[asd]* | head -1` $(LDLIBS)
