--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -531,7 +531,7 @@ strip_file_prefix=0
 extra_env=IFDH_ROOT_EXTRA
 extra_env_2=IFDH_XROOT_EXTRA
 #cp_cmd=xrdcp –DIRedirectLimit 255 -DIRequestTimeout 14400 --tpc first --force %(extra)s %(src)s %(dst)s
-cp_cmd=xrdcp -DIRequestTimeout 14400 --tpc first --force  %(extra)s %(src)s %(dst)s
+cp_cmd=[ -s ${BEARER_TOKEN_FILE:-/dev/null} ] && export BEARER_TOKEN=`cat ${BEARER_TOKEN_FILE}`; xrdcp -DIRequestTimeout 14400 --tpc first --force  %(extra)s %(src)s %(dst)s
 lss_cmd=xrdwrap.sh ls -l %(src)s
 lss_skip=0
 lss_size_last=0
